Cambios de pivotal y corrección de bugs en contactos de clientes y clientes potenciales

--- a/app/Resources/views/crmactividad/index_meetings.html.twig
+++ b/app/Resources/views/crmactividad/index_meetings.html.twig
@@ -206,8 +206,8 @@
                       },
                       escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
                       minimumInputLength: 1,
-                      templateResult: formatRepo, // omitted for brevity, see the source of this page
-                      templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
+                      templateResult: formatRepo, 
+                      templateSelection: formatRepoSelection 
                     });
         });
 
@@ -230,7 +230,7 @@
                     // console.log('a');
                     return data.nombre;
                 } else {
-                    return "Realice una búsqueda (Ctrl+g)"; 
+                    return ""; 
                 }    
             }
     </script>
