--- a/app/Resources/views/crmactividad/meetings.html.twig
+++ b/app/Resources/views/crmactividad/meetings.html.twig
@@ -31,7 +31,7 @@
                         <div class="clearfix"></div> 
                         <div class="col-md-12" style="margin-top:20px;">
                             <label >{{cuentaActividad}}</label>
-                            <select style="width:100%;" id="cuentaActividades" name="cuentaActividades" class=" cal input-sm form-control validateSelect  dpbCuentaActividad dpbFirstCuentaActividad">
+                            <select style="width:100%;" id="cuentaActividades" name="cuentaActividades" class=" cal input-sm form-control   dpbCuentaActividad dpbFirstCuentaActividad">
                                 <option value="0">Realice una búsqueda (Ctrl+g)</option>
                                 {# {% for actividad in actividades %}
                                     <option value={{actividad.id}}>{{actividad.nombre}}</option>
