--- a/app/Resources/views/crmactividad/index_tasks.html.twig
+++ b/app/Resources/views/crmactividad/index_tasks.html.twig
@@ -205,7 +205,7 @@
                       escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
                       minimumInputLength: 1,
                       templateResult: formatRepo, // omitted for brevity, see the source of this page
-                      // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
+                      templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
                     });
 
         });
