Replicación de contactos en clientes, cliente potencial, socio y proveedor

--- a/app/Resources/views/crmcuenta/index_socio.html.twig
+++ b/app/Resources/views/crmcuenta/index_socio.html.twig
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/socio/socio.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/animations/socio/socio.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/contacto/buscarContacto.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/add-comment.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/tags.js') }}"></script>
@@ -149,7 +150,11 @@
             $('.dpbTipoPersona').select2();
             $('.dpbIndustria').select2();
             $('#selectTags').select2();
+            
+            
+            
         });
+
     </script>
      
 {% endblock %}
