--- a/app/Resources/views/crmcuenta/index_cliente.html.twig
+++ b/app/Resources/views/crmcuenta/index_cliente.html.twig
@@ -77,6 +77,7 @@
     <script type="text/javascript" src="{{ asset('Resources/persist/client/client.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/add-comment.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/contacto/buscarContacto.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/animations/client/client.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/tags.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/files.js') }}"></script>
@@ -160,69 +161,7 @@
             // $('.dpbCampania').select2();
             var idContacto = $('#txtId2').val();         
             
-            
-            $('#contactos').select2({
-                 ajax: {
-                        url: function () {
-                                return Routing.generate('busqueda_contacto_select_info')+'?param1='+$('#txtId2').val();
-                            },  
-                        dataType: 'json',
-                        delay: 250,
-                        data: function (params,id,od) {
-                            console.log(params);
-                            console.log($('#txtId2').val());
-                            console.log(idContacto);
-                          return {
-                            q: params.term, // search term
-                            page: params.page
-                          };
-                        },
-                        processResults: function (data, params) {
-                                            var select2Data = $.map(data.data, function (obj) {
-                                                obj.id = obj.id;
-                                                obj.text = obj.nombre;
-
-                                                return obj;
-                                            });
-
-                                            return {
-                                                results: select2Data,
-                                                {#pagination: {
-                                                    more: (params.page * 30) < data.total_count
-                                                }#}
-                                            };
-                                        },
-                        cache: true
-                      },
-                      escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
-                      minimumInputLength: 1,
-                      templateResult: formatRepo, // omitted for brevity, see the source of this page
-                      // templateSelection: formatRepoSelection // omitted for brevity, see the source of this page
-                    });
-            
         });
-        
-        function formatRepo (data) {
-                if(data.nombre){
-                    // console.log('sdcsda');
-                    var markup = "<div class='select2-result-repository clearfix'>" +
-                                 "<div class='select2-result-repository__meta'>" +
-                                 "<div class='select2-result-repository__title'>" + data.nombre+"</div>" +
-                                 "</div></div>";
-                } else {
-                    var markup = "";
-                }
-                return markup;
-            }
-
-        function formatRepoSelection (data) {
-            if(data.nombre){
-                // console.log('a');
-                return data.nombre;
-            } else {
-                return "Realice una búsqueda (Ctrl+g)"; 
-            }    
-        }
             
     </script>
      
