Avance en gestion de oportunidad

--- a/app/Resources/views/crm_oportunidad/index.html.twig
+++ b/app/Resources/views/crm_oportunidad/index.html.twig
@@ -22,6 +22,7 @@
           <button data-loading-text="Loading..." autocomplete="off" class="btnAddPage btn btn-sm btn-primary btn-flat">{{add}}</button>
           <a id="btnCancelTop" class="hidden btn btn-sm btn-default">{{cancel}}</a>
           <button id="btnSaveTop" class="hidden btn btn-sm btn-primary">{{save}}</button>
+          <button id="btnNewQuotation" class="hidden btn btn-sm btn-primary btnNewQuotation">{{newQuote}}</button>
           <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">{{delete}}</button>
           <button class="hidden btnShow btn btn-sm btn-success btn-flat">{{show}}</button>
           <button class="hidden btnAction btn btn-sm btn-default btn-flat">{{action}}</button>
