--- a/app/Resources/views/crmcuenta/index_account.html.twig
+++ b/app/Resources/views/crmcuenta/index_account.html.twig
@@ -79,6 +79,7 @@
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/add-comment.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/tags.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/contacto/buscarContacto.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/moment.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/mask/mask.min.js') }}"></script>
     <script type="text/javascript">
