--- a/app/Resources/views/layout/layouterp.html.twig
+++ b/app/Resources/views/layout/layouterp.html.twig
@@ -59,7 +59,11 @@
  
         {% endblock %}
         {% block js_template %}
-            <script type="text/javascript" src="{{ asset('Resources/jquery/jquery310.min.js') }}"></script>
+            {#<script type="text/javascript" src="{{ asset('Resources/jquery/jquery311.min.js') }}"></script>#}
+            {# Se usara la 224 porque la 310 revienta el iconpicker            #}
+            {#<script type="text/javascript" src="{{ asset('Resources/jquery/jquery310.min.js') }}"></script>#}
+            {# Con la versión 224 funciona el iconpicker           #}
+            <script type="text/javascript" src="{{ asset('Resources/jquery/jquery224.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('Resources/angular/angular158.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/bootstrap.min.js') }}"></script>
             <script type="text/javascript" src="{{ asset('Resources/datatable/js/jquery.datatables.min.js') }}"></script>
