--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -72,6 +72,14 @@
         </span>
     </li>
 </a>                
+<a href="{{path('admin_activities-types_index')}}" class="leftnava">
+    <li class="leftnav left {% if menuTodasActividadesA is defined %}active {% endif %}">
+        {{menuTiposActividades}}
+        <span class="pull-right right">
+            <i class="{% if menuTodasActividadesA is defined %}fa fa-arrow-right {% endif %}"></i>
+        </span>
+    </li>
+</a>                
 {#<a href="{{path('crmtipocaso_index')}}" class="leftnava">
     <li class="leftnav left {% if menuTipoCasoA is defined %}active {% endif %}">
         {{menuTipoCaso}}
